tests/ucc/bind/good/struct.c
struct a
{
    char a;
};

int main(void)
{
    struct a a;
    return 0;
}
