tests/ucc/bind/bad/struct-redef.c
struct a
{
    int b;
};

struct a
{
    int b;
};
int main(void)
{
    return 0;
}
